Fix font size on mobile devices and add button to copy source url to clipboard

--- a/src/components/FilterResults/style.less
+++ b/src/components/FilterResults/style.less
@@ -17,6 +17,8 @@
   }
 }
 
-
-
-
+@media screen and (max-width: 540px) {
+  &.modal-card-title {
+    font-size: 0.9em;
+  }
+}
